// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emit > matches snapshots in dev and prod 1`] = `
{
  "_orchidery/components/Card.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { type ReactNode } from "react";
import { Box, Heading } from "@orchidery/runtime";
import { tokens } from "../tokens";

export function Card({ title, children }: { title: string; children?: ReactNode }) {
  return (
    <Box padding={tokens.space.md} radius={tokens.radius.lg} bg={tokens.color.surface} data-orchid="d0111ba3">
      <Heading level={2} data-orchid="ec90b497">
        {title}
      </Heading>
      {children}
    </Box>
  );
}
",
  "_orchidery/tokens.css": "/* Generated by Orchidery. Edit the tokens block in your .orchid files instead. */
:root {
  --color-primary: #7b3fa0;
  --color-surface: #ffffff;
  --space-md: 16px;
  --radius-lg: 12px;
}
",
  "_orchidery/tokens.ts": "// Generated by Orchidery. Edit the tokens block in your .orchid files instead.
export const tokens = {
  "color": {
    "primary": "var(--color-primary)",
    "surface": "var(--color-surface)"
  },
  "space": {
    "md": "var(--space-md)"
  },
  "radius": {
    "lg": "var(--radius-lg)"
  }
} as const;

/** Raw token values, for code that needs numbers rather than CSS variables. */
export const tokenValues = {
  "color.primary": "#7b3fa0",
  "color.surface": "#ffffff",
  "space.md": 16,
  "radius.lg": 12
} as const;
",
  "layout.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import "@orchidery/runtime/styles.css";
import "./_orchidery/tokens.css";
import { OrchideryDevTools } from "@orchidery/runtime/devtools";
import { type ReactNode } from "react";
import { Heading, Stack } from "@orchidery/runtime";
import { tokens } from "./_orchidery/tokens";

type Params = Record<string, never>;

export const metadata = {
  title: "Todos",
};

export default async function Layout(props: { children: ReactNode; params: Promise<Params> }) {
  const { children } = props;
  const params = await props.params;
  void params;
  return (
    <html lang="en">
      <body>
        <Stack gap={tokens.space.md} data-orchid="87ba7c50">
          <Heading level={1} data-orchid="91a3d9ea">
            {"Orchidery todos"}
          </Heading>
          {children}
        </Stack>
        <OrchideryDevTools />
      </body>
    </html>
  );
}
",
  "todos/[id]/_islands/Island_done.tsx": ""use client";
// Generated by Orchidery. Client island for page:/todos/[id] > #done
import { Button } from "@orchidery/runtime";
import { toggle } from "../actions";
import type { PageData } from "../page";

export function Island_done({ todo }: { todo: PageData["todo"] }) {
  return (
    <Button onClick={() => toggle(todo.id)} variant="primary" data-orchid="f308793b">
      {"Mark done"}
    </Button>
  );
}
",
  "todos/[id]/actions.ts": ""use server";
// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { revalidatePath } from "next/cache";
import { db } from "@/lib/db";

export async function toggle(id: string) {
  await db.todo.toggle(id);
  revalidatePath("/todos");
}
",
  "todos/[id]/page.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { Text } from "@orchidery/runtime";
import { tokens } from "../../_orchidery/tokens";
import { Card } from "../../_orchidery/components/Card";
import { db } from "@/lib/db";
import { Island_done } from "./_islands/Island_done";

type Params = { id: string };
type SearchParams = Record<string, string | string[] | undefined>;

async function load(params: Params, searchParams: SearchParams) {
  const todo = await db.todo.find(params.id);
  return { todo };
}
export type PageData = Awaited<ReturnType<typeof load>>;

export default async function Page(props: { params: Promise<Params>; searchParams: Promise<SearchParams> }) {
  const params = await props.params;
  const searchParams = await props.searchParams;
  void params; void searchParams;
  const { todo } = await load(params, searchParams);
  return (
    <div data-orchid="14e5eaae" style={{ display: "contents" }}>
      <Card title={todo.title}>
        <Text data-orchid="e3ee42af">
          {todo.description}
        </Text>
        {todo.done ? (
          <Text color={tokens.color.primary} data-orchid="8bd7f371">
            {"Done"}
          </Text>
        ) : (
          <Island_done todo={todo} />
        )}
        {todo.tags.map((tag, i) => (
          <Text key={tag} size="sm" data-orchid="3bb258fe">
            {\`\${i + 1}. \${tag}\`}
          </Text>
        ))}
      </Card>
    </div>
  );
}
",
}
`;

exports[`emit > matches snapshots in dev and prod 2`] = `
{
  "_orchidery/components/Card.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { type ReactNode } from "react";
import { Box, Heading } from "@orchidery/runtime";
import { tokens } from "../tokens";

export function Card({ title, children }: { title: string; children?: ReactNode }) {
  return (
    <Box padding={tokens.space.md} radius={tokens.radius.lg} bg={tokens.color.surface}>
      <Heading level={2}>
        {title}
      </Heading>
      {children}
    </Box>
  );
}
",
  "_orchidery/tokens.css": "/* Generated by Orchidery. Edit the tokens block in your .orchid files instead. */
:root {
  --color-primary: #7b3fa0;
  --color-surface: #ffffff;
  --space-md: 16px;
  --radius-lg: 12px;
}
",
  "_orchidery/tokens.ts": "// Generated by Orchidery. Edit the tokens block in your .orchid files instead.
export const tokens = {
  "color": {
    "primary": "var(--color-primary)",
    "surface": "var(--color-surface)"
  },
  "space": {
    "md": "var(--space-md)"
  },
  "radius": {
    "lg": "var(--radius-lg)"
  }
} as const;

/** Raw token values, for code that needs numbers rather than CSS variables. */
export const tokenValues = {
  "color.primary": "#7b3fa0",
  "color.surface": "#ffffff",
  "space.md": 16,
  "radius.lg": 12
} as const;
",
  "layout.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import "@orchidery/runtime/styles.css";
import "./_orchidery/tokens.css";
import { type ReactNode } from "react";
import { Heading, Stack } from "@orchidery/runtime";
import { tokens } from "./_orchidery/tokens";

type Params = Record<string, never>;

export const metadata = {
  title: "Todos",
};

export default async function Layout(props: { children: ReactNode; params: Promise<Params> }) {
  const { children } = props;
  const params = await props.params;
  void params;
  return (
    <html lang="en">
      <body>
        <Stack gap={tokens.space.md}>
          <Heading level={1}>
            {"Orchidery todos"}
          </Heading>
          {children}
        </Stack>
      </body>
    </html>
  );
}
",
  "todos/[id]/_islands/Island_done.tsx": ""use client";
// Generated by Orchidery. Client island for page:/todos/[id] > #done
import { Button } from "@orchidery/runtime";
import { toggle } from "../actions";
import type { PageData } from "../page";

export function Island_done({ todo }: { todo: PageData["todo"] }) {
  return (
    <Button onClick={() => toggle(todo.id)} variant="primary">
      {"Mark done"}
    </Button>
  );
}
",
  "todos/[id]/actions.ts": ""use server";
// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { revalidatePath } from "next/cache";
import { db } from "@/lib/db";

export async function toggle(id: string) {
  await db.todo.toggle(id);
  revalidatePath("/todos");
}
",
  "todos/[id]/page.tsx": "// Generated by Orchidery from todo.orchid. Do not edit; edit the source instead.
import { Text } from "@orchidery/runtime";
import { tokens } from "../../_orchidery/tokens";
import { Card } from "../../_orchidery/components/Card";
import { db } from "@/lib/db";
import { Island_done } from "./_islands/Island_done";

type Params = { id: string };
type SearchParams = Record<string, string | string[] | undefined>;

async function load(params: Params, searchParams: SearchParams) {
  const todo = await db.todo.find(params.id);
  return { todo };
}
export type PageData = Awaited<ReturnType<typeof load>>;

export default async function Page(props: { params: Promise<Params>; searchParams: Promise<SearchParams> }) {
  const params = await props.params;
  const searchParams = await props.searchParams;
  void params; void searchParams;
  const { todo } = await load(params, searchParams);
  return (
    <Card title={todo.title}>
      <Text>
        {todo.description}
      </Text>
      {todo.done ? (
        <Text color={tokens.color.primary}>
          {"Done"}
        </Text>
      ) : (
        <Island_done todo={todo} />
      )}
      {todo.tags.map((tag, i) => (
        <Text key={tag} size="sm">
          {\`\${i + 1}. \${tag}\`}
        </Text>
      ))}
    </Card>
  );
}
",
}
`;
